edit details of failure http helper